# WhiteStripe.py

./: .gitignore  Dockerfile  README.md  run.sh  setup.cfg
WhiteStripe/: __init__.py
