[metadata]
name = WhiteStripe
version = 0.0.4
author = Tim Robert-Fitzgerald
author_email = timrf@upenn.edu
description = A wrapper for the WhiteStripe normalization R package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PennSIVE/WhiteStripe.py
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    rpy2